# PADL

./: .gitignore  PADLOnChainBN_slither.txt  README.md  bn254.rs  setup.py  slither.config.json  testchain.sol  testsmartcontract.ipynb
.github/workflows/: slither.yml
cloud_server/python_storage/: serv.py
pyledger/: Proof_Generation.py  Proof_verification.py  compiled_code_PADLOnChainBN.sol.json  compiled_code_PADLOnChainBN.sol_hash  create_tx.py  ledger.py  zkutils.py
pyledger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyledger/contracts/: Auction.sol  PADLOnChain.sol  PADLOnChainBN.sol  PadlToken.sol  PadlTokenBN.sol  StorePermissionsAndTxns.sol
pyledger/contracts/Interfaces/: BNInterface.sol  ConsistencyProofInterface.sol  EquivalenceProofInterface.sol  (+2 more)
pyledger/examples/: ERC-Ex.ipynb  ISSUER.ipynb  padl_bond_coupon_payment.py  padl_cli.py  padl_deployERC.py  padl_evm.py  padl_local.py  padl_local2.py  padl_local3_mix.py  tx_scheme.ipynb
pyledger/extras/: injective_utils.py
tests/: test_benchmark.py  test_ledger.py  test_zkbp.py
tutorials/: 0-zkbp-intro.ipynb  1-zkbp-tutorial.ipynb  2-padl-tutorial.ipynb  3-padl-workshop-ex1.ipynb  README.md
zarchive_bn_expr/: ConsistencyProofBN.sol  bn254.sol  bn254__.rs  compiled_ConsistencyProofBN.json  compiled_EquivalenceProofBN.json  msm.ipynb  testchainbp.sol  testrangeproof.ipynb
zkbp_module/: Cargo.toml  pyproject.toml
zkbp_module/src/: lib.rs
zkbp_module/src/curv_ext/: bn254.rs
zkpContractsDev/: EquivalenceProofBN.sol  PADLOnChainBN.sol  deployBN.py  tryProofsVer.py
(+17 files in other folders)
