[project]
name = "zkbp"
version = "0.1.4"
description = "ZKBP Python bindings"  # <-- (add your description)
authors = [{ name = "JP Morgan Chase" }]
license = { text = "Apache-2.0" }  # <-- Apache Software License
readme = "README.md"
repository = "https://github.com/jpmorganchase/padl"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[build-system]
requires = ["maturin>=1.3,<2.0"]  # <-- I recommend bumping to >=1.3
build-backend = "maturin"

[tool.maturin]
include = ["Cargo.toml", "README.md"]